[metadata]
name = htmlwrite
author = Gary van der Merwe
author-email = garyvdm@gmail.com
summary = Write html to a file like object, using a pythonic syntax.
description-file = README.md
home-page = https://github.com/garyvdm/htmlwrite
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Web Environment
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Internet :: WWW/HTTP :: Dynamic Content

